src/test/parse-fail/struct-field-numeric-shorthand.rs
// Copyright 2016 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// compile-flags: -Z parse-only

#![feature(field_init_shorthand)]

struct Rgb(u8, u8, u8);

fn main() {
    let _ = Rgb { 0, 1, 2 }; //~ ERROR expected identifier, found `0`
}
